tests/files/flow_controller_tests/should_run/046.cmdr
x = false;
print toString(x);