tests/files/flow_controller_tests/should_fail/090.cmdr
x = false;
print arcsec(x);